--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>voice-cmu-slt-hsmm</artifactId>
             <version>5.2</version>
         </dependency>
+        <dependency>
+            <groupId>de.dfki.mary</groupId>
+            <artifactId>voice-cmu-rms-hsmm</artifactId>
+            <version>5.2</version>
+        </dependency>
         <!-- /MaryTTS -->
 
         <dependency>
